--- a/assets/styles/login.css
+++ b/assets/styles/login.css
@@ -7,7 +7,7 @@
 
 body {
   height: 100vh;
-  background: linear-gradient(to right, #3a7bd5, #00d2ff);
+  background: linear-gradient(to right, #8b0000, #a52a2a);
   display: flex;
   justify-content: center;
   align-items: center;
